# my_script

./: .gitignore  Cargo.toml  README.md  flake.nix  joblog.csv
Sample_Siml/: main.c
c/: main.c
python/: main.py
src/: main.rs
